# ROBOGAM-FRUITSTORE

App_ROBGAM/: ROBGAM.aia  ROBGAM_App.aia  SendData_Firebase.py  Send_qrcode.py  Storage_Recognition_Fruit_Sub.py  Storage_Recognition_Fruit_Sum.py  qr_code.py  readme.txt
Detector_de_frutas/: Detector_frutas.py  Red_Neuronal.py
tiago_public_ws/.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
tiago_public_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
tiago_public_ws/devel/.private/aruco/: .catkin  setup.sh  (+1 more)
tiago_public_ws/logs/DETECTOR/: build.check.000.log.stderr  build.check.001.log.stderr  build.cmake.001.log.stderr
tiago_public_ws/logs/controller_manager/: build.make.039.log.stderr
tiago_public_ws/logs/fruitstore_nav/: build.cmake.000.log.stderr
tiago_public_ws/logs/play_motion/: build.make.000.log.stderr
tiago_public_ws/logs/tiago_moveit_tutorial/: build.make.025.log.stderr
tiago_public_ws/logs/tiago_opencv_tutorial/: build.cmake.001.log.stderr
tiago_public_ws/logs/tiago_pcl_tutorial/: build.make.025.log.stderr
tiago_public_ws/src/: setup.sh
tiago_public_ws/src/fruit_detection/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_public_ws/src/fruit_detection/src/: fruit_detection.py
tiago_public_ws/src/fruitstore_nav/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_public_ws/src/fruitstore_nav/launch/: fruitstore_nav.launch  localization.launch  navigation.launch
tiago_public_ws/src/fruitstore_nav/src/configurations/fruitstore_nav/: map.pgm
(+4914 files in other folders)
